# travel-messanger

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
server/: .env  .gitignore  Makefile  README.md  index.html  pyproject.toml  requirements.txt  run.py
server/api/: __init__.py
server/api/endpoints/: __init__.py  auth.py  chat.py  example.py
server/app/: __init__.py  main.py
server/backend/api/: __init__.py
server/backend/app/: __init__.py  direct.py  main.py  room.py  users.py
server/backend/crud/: base.py  chat.py  manager.py  post.py
server/backend/db/: __init__.py  database.py  models.py  settings.py
server/backend/dto/: __init__.py  chat.py  comment.py  post.py  user.py
server/backend/middleware/: __init__.py
server/backend/schemas/: comment.py  content.py  post.py  user.py
server/backend/utils/: __init__.py  base.py  exception_handlers.py  mocks.py
server/crud/: base.py
server/db/: database.py  models.py  settings.py
server/docker/: backend.Dockerfile  docker-compose.yml
server/migrations/: env.py
server/migrations/versions/: 06db11cd8556_nevers.py  07082915180a_nevers.py  1178bf18c925_nevers.py  33bccaf462d8_comment.py  3ffbc05d205d_nevers.py  4570d05ed5d7_nevers.py  5b0b21c062b2_nevers.py  5d18562fec52_nevers.py  646f36b59a8a_nevers.py  6fb436ae8cb7_nevers.py  7564d0d819e5_nevers.py  7c274e212b72_nevers.py  a28753a97c39_nevers.py  b0d9ee17b8bf_nevers.py  b81c0e3fb96d_nevers.py  cd29647b43d9_nevers.py  d33c88e7dfaf_nevers.py  (+6 more)
server/schemas/: chat.py  content.py  user.py
server/utils/: mocks.py
(+113 files in other folders)
